feat: 3단계 구현(Test 포함)